spacing fixes on mobile for Past events page

--- a/src/scss/pages/page-events.scss
+++ b/src/scss/pages/page-events.scss
@@ -336,6 +336,10 @@
 		padding-top: 60px;
 		padding-bottom: 0px;
 
+		@include media-breakpoint-down(md) {
+			padding-top: 10px;
+		}
+
 		.event-section-tiltle {
 			margin-bottom: 40px;
 			@include media-breakpoint-up(md) {
